Aligned and added correct styles to  all items in Section 1

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@ div {
     width: 100%;
 }
 
+.Header {
+    background-color: #1F2937;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .HeaderLink {
     margin-top: 20px;
     height: 45px;
@@ -17,17 +25,63 @@ div {
     align-self: flex-end;
 }
 
-.Header {
-    background-color: #1F2937;
-    height: 65px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#HeaderLogo {
+    margin-top: 20px;
+    margin-right: 500px;
+    height: 45px;
+    font-size: 24px;
+    color: #F9FAF8;
+    width: 200px;
+    align-self: flex-start;
 }
 
 .Section1 {
     background-color: #1F2937;
     height: 500px;
+    padding-left: 125px;
+    display: grid;
+    grid-template-columns: 1fr 50%;
+    grid-gap: 20px;
+    align-items: center;
+      }
+
+
+#Title { 
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+p {
+    height: 75px;
+    width: 450px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+button {
+    height: 40px;
+    width: 125px;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#ImgPlaceholder {
+    height: 200px;
+    width: 50%;
+    background-color: #ffffff7f;
+    color: #ffffff;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Section2 {
@@ -48,14 +102,4 @@ div {
 .Footer {
     background-color: #1F2937;
     height: 65px;
-}
-
-#HeaderLogo {
-    margin-top: 20px;
-    margin-right: 500px;
-    height: 45px;
-    font-size: 24px;
-    color: #F9FAF8;
-    width: 200px;
-    align-self: flex-start;
 }
